<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screen05">

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="448dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/screen05_welcome"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="377dp"
            android:layout_height="72dp"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/screen05_description"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="@string/screen05_username_hint"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_alignTop="@id/editText4"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/editText4"
            app:srcCompat="@drawable/signup" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@id/editText4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:hint="@string/screen05_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_alignTop="@id/editText2"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/editText2"
            app:srcCompat="@drawable/signup2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/screen05_forgot_password"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="370dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif"
        android:text="@string/button_login"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="370dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/button_login_google"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        android:layout_width="370dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:text="@string/button_login_apple"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
